--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,6 +21,13 @@
                 "label": "Documentation",
                 "url": "https://docs.netlify.com/visual-editor/overview/",
                 "underline": "hover"
+            },
+            {
+                "type": "Link",
+                "label": "Tanslation",
+                "url": "www.shamiltranslation.com",
+                "underline": "always",
+                "color": "primary"
             }
         ]
     }
