--- a/content/data/config.json
+++ b/content/data/config.json
@@ -12,15 +12,10 @@
             },
             {
                 "type": "Link",
-                "label": "About",
-                "url": "/about",
-                "underline": "hover"
-            },
-            {
-                "type": "Link",
-                "label": "Documentation",
-                "url": "https://docs.netlify.com/visual-editor/overview/",
-                "underline": "hover"
+                "label": "Tanslation",
+                "url": "www.shamiltranslation.com",
+                "underline": "always",
+                "color": "primary"
             }
         ]
     }
