--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,6 +26,13 @@
             },
             {
                 "type": "Link",
+                "label": "Events",
+                "url": "https://www.aventsplus.com",
+                "underline": "always",
+                "color": "primary"
+            },
+            {
+                "type": "Link",
                 "label": "Events Managment",
                 "url": "https://www.aventsplus.com",
                 "underline": "always",
