--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,6 +16,20 @@
                 "url": "www.shamiltranslation.com",
                 "underline": "always",
                 "color": "primary"
+            },
+            {
+                "type": "Link",
+                "label": "Consulting",
+                "url": "https://www.shamilconsulting.com",
+                "underline": "always",
+                "color": "primary"
+            },
+            {
+                "type": "Link",
+                "label": "Events Managment",
+                "url": "https://www.aventsplus.com",
+                "underline": "always",
+                "color": "primary"
             }
         ]
     }
