--- a/content/data/config.json
+++ b/content/data/config.json
@@ -2,7 +2,7 @@
     "type": "Config",
     "favicon": "/images/favicon.svg",
     "header": {
-        "title": "Shamil Group Landline Page",
+        "title": "Shamil Group Landing Page",
         "navLinks": [
             {
                 "type": "Link",
